<resources>
    <string name="app_name">RU Pizzeria</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="order_chicago_pizza">Order Chicago Pizza</string>
    <string name="order_ny_pizza">Order NY Pizza</string>
    <string name="view_all_store_orders">View all Store Orders</string>
    <string name="view_current_order">View Current Order</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crust_type">Crust Type</string>
    <string name="price">Price $</string>
    <string name="place_order">Place Order</string>
    <string name="add_to_order">Add To Order</string>
    <string name="add">Add Topping</string>
    <string name="remove">Remove Topping</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="list_of_toppings">List Of Toppings</string>
    <string name="added_toppings">Added Toppings</string>
    <string name="select_order">Select Order To View</string>
    <string name="order_total">Order Total (Tax Included) $</string>
    <string name="current_order_total">Current Order Total $</string>
    <string name="clear_all_orders">Clear Order</string>
    <string name="subtotal">Subtotal: $</string>
    <string name="sales_tax">Sales Tax: $</string>
    <string name="zero">0.00</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="canceled_order">Successfully Canceled Order</string>
    <string name="hand_tossed">Hand Tossed</string>
    <string name="brooklyn">Brooklyn</string>
    <string name="thin">Thin</string>
    <string name="pan">Pan</string>
    <string name="deep_dish">Deep Dish</string>
    <string name="stuffed">Stuffed</string>
    <string name="order_number">Order Number</string>
    <string name="store_order">View All Store Orders</string>
    <string name="select_to_add">Select a topping below to add to pizza</string>
    <string name="select_to_remove">Select a topping from the list below to remove from pizza</string>
    <string name="current_order">All Pizzas in Current Order</string>
    <string name="click_to_remove">Select a pizza from below to remove from current order</string>
    <string-array name="toppings_array">
        <item>Pineapple</item>
        <item>Chicken</item>
        <item>Beef</item>
        <item>Ham</item>
        <item>Sausage</item>
        <item>Green Peppers</item>
        <item>Mushroom</item>
        <item>Onion</item>
        <item>BBQ Chicken</item>
        <item>Spinach</item>
        <item>Provolone</item>
        <item>Olives</item>
        <item>Bacon</item>
    </string-array>

    <string-array name="pizza_options">
        <item>Build Your Own Pizza</item>
        <item>Deluxe</item>
        <item>BBQ Chicken</item>
        <item>Meatzza</item>
    </string-array>

</resources>