<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/order_chicago_pizza"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_chicago_pizza"
                android:textAlignment="center"
                android:textColor="#E82121"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/ChicagoPizzaImage"
                android:layout_width="match_parent"
                android:layout_height="209dp"
                android:contentDescription="@string/order_chicago_pizza"
                app:srcCompat="@drawable/chicagopizza" />

            <Spinner
                android:id="@+id/ChoosePizzaChicago"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/order_chicago_pizza"
                android:minHeight="48dp" />

            <RadioGroup
                android:id="@+id/ChicagoPizzaSize"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/small" />

                <RadioButton
                    android:id="@+id/medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/medium" />

                <RadioButton
                    android:id="@+id/large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/large" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="178dp"
                    android:layout_height="wrap_content"
                    android:text="@string/crust_type" />

                <TextView
                    android:id="@+id/TypeOfCrustChicago"
                    android:layout_width="108dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/list_of_toppings"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_to_add" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ToppingsListChicago"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/added_toppings"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_to_remove" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/MyToppingsListChicago"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/price"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/PriceOfPizzaChicago"
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/AddToOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_to_order" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>